--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "firebase-admin": "^9.11.1",
     "next": "11.1.0",
     "next-connect": "^0.10.2",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "eslint": "7.32.0",
